--- a/ComputerGraphics/3DFoundationOfMathematics/3DFoundationOfMathematics.vcxproj
+++ b/ComputerGraphics/3DFoundationOfMathematics/3DFoundationOfMathematics.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -11,20 +11,20 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{AAA44499-1826-4930-9703-7C1544A4F271}</ProjectGuid>
-    <RootNamespace>Algorithms</RootNamespace>
+    <ProjectGuid>{FD714CBB-38D3-4CD5-B445-205A145AC4BF}</ProjectGuid>
+    <RootNamespace>My3DFoundationOfMathematics</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -44,7 +44,6 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -65,44 +64,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="3Sum.h" />
-    <ClInclude Include="4Sum.h" />
-    <ClInclude Include="best_time_to_buy_and_sell_stock_III.h" />
-    <ClInclude Include="construct_binary_tree_from_inorder_and_postorder_traversal.h" />
-    <ClInclude Include="construct_binary_tree_from_preorder_and_inorder_traversal.h" />
-    <ClInclude Include="contains_duplicate_II.h" />
-    <ClInclude Include="convert_sorted_list_to_binary_search_tree.h" />
-    <ClInclude Include="count_and_say.h" />
-    <ClInclude Include="delete_node_in_a_linked_list.h" />
-    <ClInclude Include="find_all_path.h" />
-    <ClInclude Include="kth_smallest_element_in_a_BST.h" />
-    <ClInclude Include="k_sum.h" />
-    <ClInclude Include="longest_palindromic_substring.h" />
-    <ClInclude Include="maximum_subarray.h" />
-    <ClInclude Include="merge_k_sorted_lists.h" />
-    <ClInclude Include="merge_two_sorted_lists.h" />
-    <ClInclude Include="minimum_path_sum.h" />
-    <ClInclude Include="palindrome_number.h" />
-    <ClInclude Include="print_n_number.h" />
-    <ClInclude Include="remove_linked_list_elements.h" />
-    <ClInclude Include="reorder_list .h" />
-    <ClInclude Include="replace_blank.h" />
-    <ClInclude Include="reverse_nodes_in_k-Group.h" />
-    <ClInclude Include="rotate_list.h" />
-    <ClInclude Include="serialize_and_deserialize_binary_tree.h" />
-    <ClInclude Include="sort_list.h" />
-    <ClInclude Include="sort_search_position.h" />
-    <ClInclude Include="string_to_integer.h" />
-    <ClInclude Include="triangle.h" />
-    <ClInclude Include="unique_paths.h" />
-    <ClInclude Include="unique_paths_II.h" />
-    <ClInclude Include="utility.h" />
-    <ClInclude Include="word_break.h" />
-    <ClInclude Include="word_break_II.h" />
-    <ClInclude Include="zig_zag_conversion.h" />
+    <ClInclude Include="euler_angles.h" />
+    <ClInclude Include="math_util.h" />
+    <ClInclude Include="matrix4x3.h" />
+    <ClInclude Include="quaternion.h" />
+    <ClInclude Include="rotation_matrix.h" />
+    <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="euler_angles.cpp" />
+    <ClCompile Include="math_util.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
