--- a/leetcode/DesignPattern/DesignPattern.vcxproj
+++ b/leetcode/DesignPattern/DesignPattern.vcxproj
@@ -10,9 +10,15 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="subject_and_observer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="subject_and_observer.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{AAA44499-1826-4930-9703-7C1544A4F271}</ProjectGuid>
-    <RootNamespace>Algorithms</RootNamespace>
+    <ProjectGuid>{D1C9B127-E116-4071-BCCC-02D59EF79671}</ProjectGuid>
+    <RootNamespace>DesignPattern</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -44,7 +50,6 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -64,46 +69,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="3Sum.h" />
-    <ClInclude Include="4Sum.h" />
-    <ClInclude Include="best_time_to_buy_and_sell_stock_III.h" />
-    <ClInclude Include="construct_binary_tree_from_inorder_and_postorder_traversal.h" />
-    <ClInclude Include="construct_binary_tree_from_preorder_and_inorder_traversal.h" />
-    <ClInclude Include="contains_duplicate_II.h" />
-    <ClInclude Include="convert_sorted_list_to_binary_search_tree.h" />
-    <ClInclude Include="count_and_say.h" />
-    <ClInclude Include="delete_node_in_a_linked_list.h" />
-    <ClInclude Include="find_all_path.h" />
-    <ClInclude Include="kth_smallest_element_in_a_BST.h" />
-    <ClInclude Include="k_sum.h" />
-    <ClInclude Include="longest_palindromic_substring.h" />
-    <ClInclude Include="maximum_subarray.h" />
-    <ClInclude Include="merge_k_sorted_lists.h" />
-    <ClInclude Include="merge_two_sorted_lists.h" />
-    <ClInclude Include="minimum_path_sum.h" />
-    <ClInclude Include="palindrome_number.h" />
-    <ClInclude Include="print_n_number.h" />
-    <ClInclude Include="remove_linked_list_elements.h" />
-    <ClInclude Include="reorder_list .h" />
-    <ClInclude Include="replace_blank.h" />
-    <ClInclude Include="reverse_nodes_in_k-Group.h" />
-    <ClInclude Include="rotate_list.h" />
-    <ClInclude Include="serialize_and_deserialize_binary_tree.h" />
-    <ClInclude Include="sort_list.h" />
-    <ClInclude Include="sort_search_position.h" />
-    <ClInclude Include="string_to_integer.h" />
-    <ClInclude Include="triangle.h" />
-    <ClInclude Include="unique_paths.h" />
-    <ClInclude Include="unique_paths_II.h" />
-    <ClInclude Include="utility.h" />
-    <ClInclude Include="word_break.h" />
-    <ClInclude Include="word_break_II.h" />
-    <ClInclude Include="zig_zag_conversion.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="main.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
