--- a/ComputerGraphics/3DFoundationOfMathematics/3DFoundationOfMathematics.vcxproj
+++ b/ComputerGraphics/3DFoundationOfMathematics/3DFoundationOfMathematics.vcxproj
@@ -69,14 +69,13 @@
     <ClInclude Include="matrix4x3.h" />
     <ClInclude Include="quaternion.h" />
     <ClInclude Include="rotation_matrix.h" />
-    <ClInclude Include="Vector3.h" />
+    <ClInclude Include="vector3.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="euler_angles.cpp" />
     <ClCompile Include="math_util.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <ClCompile Include="quaternion.cpp" />
+    <ClCompile Include="rotation_matrix.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
