--- a/leetcode/Algorithms/Algorithms.vcxproj.filters
+++ b/leetcode/Algorithms/Algorithms.vcxproj.filters
@@ -120,6 +120,12 @@
     <ClInclude Include="contains_duplicate_II.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="majority_element.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="pow_x_n.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
